--- a/client/src/app/all-items/all-items.component.css
+++ b/client/src/app/all-items/all-items.component.css
@@ -38,7 +38,20 @@ h2 {
   flex-direction: row;
   justify-content: space-evenly;
 }
-.card-contents {
+
+.online-filter,
+.petes-filter,
+.jewel-filter,
+.aldi-filter,
+.out-of-stock-filter,
+.all-filter {
+ width:100%;
+ display:flex;
+ flex-direction: column;
+ align-items: center;
+}
+
+.card-contents-all {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -84,10 +97,11 @@ button {
 .add-button {
   display: flex;
   justify-content: flex-end;
+  padding: 0 5em 0 0;
 }
 
 .item-form {
   display: flex;
   flex-direction: column;
-  padding: 2em 0 0 0;
+  padding: 2em 10em 0 10em;
 }
