--- a/client/src/app/all-items/all-items.component.html
+++ b/client/src/app/all-items/all-items.component.html
@@ -176,7 +176,7 @@
         </button>
       </div>
 
-      <div *ngIf="isAdding">
+      <div *ngIf="isAdding" class="form-container">
         <form
           class="item-form"
           [formGroup]="itemForm"
