--- a/client/src/app/all-items/all-items.component.css
+++ b/client/src/app/all-items/all-items.component.css
@@ -109,8 +109,14 @@ button {
   padding: 0 5em 0 0;
 }
 
+.form-container{
+  display: flex;
+  justify-content: space-around;
+}
+
 .item-form {
   display: flex;
   flex-direction: column;
-  padding: 2em 10em 0 10em;
+  padding: 2em 0 2em 0;
+  width: 65%;
 }
