--- a/client/src/app/all-items/all-items.component.html
+++ b/client/src/app/all-items/all-items.component.html
@@ -7,7 +7,7 @@
       <mat-chip-option unselected (click)="oosChip()"
         >Out of Stock</mat-chip-option
       >
-      <mat-chip-option unselected>Aldi</mat-chip-option>
+      <mat-chip-option unselected (click)="aldiChip()">Aldi</mat-chip-option>
       <mat-chip-option unselected>Jewel Osco</mat-chip-option>
       <mat-chip-option unselected>Pete's Fresh Market</mat-chip-option>
       <mat-chip-option unselected>Online</mat-chip-option>
@@ -16,10 +16,10 @@
   <div class="notebook">
     <div class="allCards">
 
-      <div class="all-filter" *ngIf="allchip">
+      <div class="all-filter" *ngIf="allchip || !allChip&&!oosChip&&!aldiChip&&!jewelChip&&!petesChip&&!onlineChip">
         <div class="card-contents-all" *ngFor="let item of items$ | async">
           <div *ngIf="item.editing" class="edit-form">
-            <button mat-mini-fab color="warn" (click)="ngOnInit()">
+            <button mat-mini-fab color="warn" (click)="filterAll()">
               <mat-icon fontIcon="clear" />
             </button>
             <form [formGroup]="editForm" (ngSubmit)="submitEdit(this.item._id)">
@@ -87,159 +87,237 @@
               <mat-icon fontIcon="delete" />
             </button>
           </div>
+          
         </div>
-      </div>
-
-      <div class="out-of-stock-filter" *ngIf="ooschip">
-        <div class="card-contents-all" *ngFor="let item of items$ | async">
-          <div class="oos-filter" *ngIf="item.inStock==0" >
-          <div *ngIf="item.editing" class="edit-form">
-            <button mat-mini-fab color="warn" (click)="ngOnInit()">
-              <mat-icon fontIcon="clear" />
-            </button>
-            <form [formGroup]="editForm" (ngSubmit)="submitEdit(this.item._id)">
-              <button mat-mini-fab color="primary" type="submit">
-                <mat-icon fontIcon="done"></mat-icon>
-              </button>
-              <input
-                class="edit-input"
-                type="text"
-                id="item"
-                name="item"
-                [(ngModel)]="item.item"
-                formControlName="item"
-                required
-              />
-              <input
-                class="edit-stock"
-                id="inStock"
-                name="inStock"
-                type="number"
-                [(ngModel)]="item.inStock"
-                formControlName="inStock"
-              />
-              <select
-                class="edit-frequency"
-                id="frequency"
-                name="frequency"
-                [(ngModel)]="item.frequency"
-                formControlName="frequency"
-                required
-              >
-                <option value="One-Time Request">One-Time Request</option>
-                <option value="Monthly">Monthly</option>
-                <option value="Weekly">Weekly</option>
-                <option value="Indefinite">Idefinite</option>
-              </select>
-              <select
-                class="edit-store"
-                id="store"
-                name="store"
-                [(ngModel)]="item.store"
-                formControlName="store"
-              >
-                <option value="Aldi">Aldi</option>
-                <option value="Jewel Osco">Jewel Osco</option>
-                <option value="Pete's Fresh Market">Pete's Fresh Market</option>
-                <option value="Online">Online</option>
-              </select>
-            </form>
-          </div>
-
-          <div *ngIf="!item.editing" class="card-contents-item">
-            <b>{{ item.item }}</b>
-          </div>
-
-          <div *ngIf="!item.editing" class="card-contents-inStock">
-            {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
-          </div>
-
-          <div *ngIf="!item.editing" class="button-container">
-            <button color="primary" (click)="item.editing = true" mat-mini-fab>
-              <mat-icon>mode</mat-icon>
-            </button>
-            <button color="warn" mat-mini-fab (click)="deleteItem(item._id)">
-              <mat-icon fontIcon="delete" />
-            </button>
-          </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="add-button">
-        <button
-          mat-fab
-          [color]="isAdding ? 'warn' : 'primary'"
-          (click)="toggle()"
-        >
-          <mat-icon>{{ isAdding ? "clear" : "add" }}</mat-icon>
-        </button>
-      </div>
-
-      <div *ngIf="isAdding" class="form-container">
-        <form
-          class="item-form"
-          [formGroup]="itemForm"
-          (ngSubmit)="submitForm()"
-        >
-          <div class="alert alert-danger" *ngIf="displayError">
-            Input Required
-          </div>
-          <mat-form-field>
-            <mat-label for="item"><strong>Item Name</strong></mat-label>
-            <input
-              matInput
-              type="text"
-              id="item"
-              name="item"
-              formControlName="item"
-              required
-            />
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-select id="frequency" formControlName="frequency" required>
-              <mat-option value="One-Time Request">One-Time Request</mat-option>
-              <mat-option value="Weekly">Weekly</mat-option>
-              <mat-option value="Monthly">Monthly</mat-option>
-              <mat-option value="Indefinite">Indefinite</mat-option>
-            </mat-select>
-            <mat-label> <strong> Frequency</strong> </mat-label>
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-label for="inStock">In Stock</mat-label>
-            <input
-              matInput
-              type="number"
-              id="inStock"
-              name="inStock"
-              formControlName="inStock"
-            />
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-select id="store" name="store" formControlName="store">
-              <mat-option value="Aldi">Aldi</mat-option>
-              <mat-option value="Jewel Osco">Jewel Osco</mat-option>
-              <mat-option value="Pete's Fresh Market"
-                >Pete's Fresh Market</mat-option
-              >
-              <mat-option value="Online">Online</mat-option>
-            </mat-select>
-            <mat-label>Store </mat-label>
-          </mat-form-field>
-
+        <div class="add-button">
           <button
-            mat-raised-button
-            color="primary"
-            [disabled]="!itemForm.valid"
-            type="submit"
+            mat-fab
+            [color]="isAdding ? 'warn' : 'primary'"
+            (click)="toggle()"
           >
-            Submit
+            <mat-icon>{{ isAdding ? "clear" : "add" }}</mat-icon>
           </button>
-        </form>
+        </div>
+  
+        <div *ngIf="isAdding" class="form-container">
+          <form
+            class="item-form"
+            [formGroup]="itemForm"
+            (ngSubmit)="submitForm()"
+          >
+            <div class="alert alert-danger" *ngIf="displayError">
+              Input Required
+            </div>
+            <mat-form-field>
+              <mat-label for="item"><strong>Item Name</strong></mat-label>
+              <input
+                matInput
+                type="text"
+                id="item"
+                name="item"
+                formControlName="item"
+                required
+              />
+            </mat-form-field>
+  
+            <mat-form-field>
+              <mat-select id="frequency" formControlName="frequency" required>
+                <mat-option value="One-Time Request">One-Time Request</mat-option>
+                <mat-option value="Weekly">Weekly</mat-option>
+                <mat-option value="Monthly">Monthly</mat-option>
+                <mat-option value="Indefinite">Indefinite</mat-option>
+              </mat-select>
+              <mat-label> <strong> Frequency</strong> </mat-label>
+            </mat-form-field>
+  
+            <mat-form-field>
+              <mat-label for="inStock">In Stock</mat-label>
+              <input
+                matInput
+                type="number"
+                id="inStock"
+                name="inStock"
+                formControlName="inStock"
+              />
+            </mat-form-field>
+  
+            <mat-form-field>
+              <mat-select id="store" name="store" formControlName="store">
+                <mat-option value="Aldi">Aldi</mat-option>
+                <mat-option value="Jewel Osco">Jewel Osco</mat-option>
+                <mat-option value="Pete's Fresh Market"
+                  >Pete's Fresh Market</mat-option
+                >
+                <mat-option value="Online">Online</mat-option>
+              </mat-select>
+              <mat-label>Store </mat-label>
+            </mat-form-field>
+  
+            <button
+              mat-raised-button
+              color="primary"
+              [disabled]="!itemForm.valid"
+              type="submit"
+            >
+              Submit
+            </button>
+          </form>
+        </div>
       </div>
+
+
+
+      <div class="out-of-stock-filter" *ngIf="aldichip">
+        <div class="card-contents-all" *ngFor="let item of items$ | async">
+          <div class="aldi-filter" *ngIf="this.item.store=='Aldi'" >
+          <div *ngIf="item.editing" class="edit-form">
+            <button mat-mini-fab color="warn" (click)="filterAldi()">
+              <mat-icon fontIcon="clear" />
+            </button>
+            <form [formGroup]="aldiForm" (ngSubmit)="submitEdit(this.item._id)">
+              <button mat-mini-fab color="primary" type="submit">
+                <mat-icon fontIcon="done"></mat-icon>
+              </button>
+              <input
+                class="edit-input"
+                type="text"
+                id="item"
+                name="item"
+                [(ngModel)]="item.item"
+                formControlName="item"
+                required
+              />
+              <input
+                class="edit-stock"
+                id="inStock"
+                name="inStock"
+                type="number"
+                [(ngModel)]="item.inStock"
+                formControlName="inStock"
+              />
+              <select
+                class="edit-frequency"
+                id="frequency"
+                name="frequency"
+                [(ngModel)]="item.frequency"
+                formControlName="frequency"
+                required
+              >
+                <option value="One-Time Request">One-Time Request</option>
+                <option value="Monthly">Monthly</option>
+                <option value="Weekly">Weekly</option>
+                <option value="Indefinite">Idefinite</option>
+              </select>
+              <select
+                class="edit-store"
+                id="store"
+                name="store"
+                [(ngModel)]="item.store"
+                formControlName="store"
+              >
+                <option value="Aldi">Aldi</option>
+                <option value="Jewel Osco">Jewel Osco</option>
+                <option value="Pete's Fresh Market">Pete's Fresh Market</option>
+                <option value="Online">Online</option>
+              </select>
+            </form>
+          </div>
+
+          <div *ngIf="!item.editing" class="card-contents-item">
+            <b>{{ item.item }}</b>
+          </div>
+
+          <div *ngIf="!item.editing" class="card-contents-inStock">
+            {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
+          </div>
+
+          <div *ngIf="!item.editing" class="button-container">
+            <button color="primary" (click)="item.editing = true" mat-mini-fab>
+              <mat-icon>mode</mat-icon>
+            </button>
+            <button color="warn" mat-mini-fab (click)="deleteItem(item._id)">
+              <mat-icon fontIcon="delete" />
+            </button>
+          </div>
+          </div>
+        </div>
+        
+        <div class="add-button">
+          <button
+            mat-fab
+            [color]="isAdding ? 'warn' : 'primary'"
+            (click)="toggle()"
+          >
+            <mat-icon>{{ isAdding ? "clear" : "add" }}</mat-icon>
+          </button>
+        </div>
+  
+        <div *ngIf="isAdding" class="form-container">
+          <form
+            class="item-form"
+            [formGroup]="aldiForm"
+            (ngSubmit)="submitForm()"
+          >
+            <div class="alert alert-danger" *ngIf="displayError">
+              Input Required
+            </div>
+            <mat-form-field>
+              <mat-label for="item"><strong>Item Name</strong></mat-label>
+              <input
+                matInput
+                type="text"
+                id="item"
+                name="item"
+                formControlName="item"
+                required
+              />
+            </mat-form-field>
+  
+            <mat-form-field>
+              <mat-select id="frequency" formControlName="frequency" required>
+                <mat-option value="One-Time Request">One-Time Request</mat-option>
+                <mat-option value="Weekly">Weekly</mat-option>
+                <mat-option value="Monthly">Monthly</mat-option>
+                <mat-option value="Indefinite">Indefinite</mat-option>
+              </mat-select>
+              <mat-label> <strong> Frequency</strong> </mat-label>
+            </mat-form-field>
+  
+            <mat-form-field>
+              <mat-label for="inStock">In Stock</mat-label>
+              <input
+                matInput
+                type="number"
+                id="inStock"
+                name="inStock"
+                formControlName="inStock"
+              />
+            </mat-form-field>
+  
+            <mat-form-field>
+              <mat-select id="store" name="store" formControlName="store">
+                <mat-option value="Aldi">Aldi</mat-option>
+                <mat-option value="Jewel Osco">Jewel Osco</mat-option>
+                <mat-option value="Pete's Fresh Market"
+                  >Pete's Fresh Market</mat-option
+                >
+                <mat-option value="Online">Online</mat-option>
+              </mat-select>
+              <mat-label>Store </mat-label>
+            </mat-form-field>
+  
+            <button
+              mat-raised-button
+              color="primary"
+              [disabled]="!itemForm.valid"
+              type="submit"
+            >
+              Submit
+            </button>
+          </form>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
