added task board where user will be able to add weekly or monthly tasks and reminders

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -14,8 +14,9 @@
 
   <mat-sidenav class="sideNavCont"  #sideNav mode="side" [(opened)]="opened">
     <div class="sideNav">
-    <button mat-button routerLink="/groceries">Lists</button>
-    <button mat-button routerLink="/all">All Items</button>
+    <button mat-button routerLink="/groceries">Grocery Lists</button>
+    <button mat-button routerLink="/all">All Groceries</button>
+    <button mat-button routerLink="/tasks">Task Board</button>
     </div>
   </mat-sidenav>
 
