--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,7 +7,7 @@
     <mat-icon>menu</mat-icon>
   </button>
 
-  <h2>Shopping List</h2>
+  <h2>Desk</h2>
 </mat-toolbar>
 
 <mat-sidenav-container class="sideBarNavigation">
