--- a/client/src/app/task-board/task-board.component.html
+++ b/client/src/app/task-board/task-board.component.html
@@ -4,31 +4,35 @@
   <div class="wooden-board">
     <div class="board-background">
       <div class="board-content">
-        <div class="title">
-          <h2>Task Board</h2>
-        </div>
         <div class="tasks">
           <div class="left-board">
             <h5>Reminders</h5>
-            <button mat-mini-fab class="add-button" color="primary">
-              <mat-icon>add</mat-icon>
-            </button>
+            <div class="button-container">
+              <button mat-mini-fab class="add-button" color="primary">
+                <mat-icon>add</mat-icon>
+              </button>
+            </div>
           </div>
           <div class="calendar">
+            <h5>This Month Here</h5>
             <button mat-flat-button color="primary" (click)="toggleCalendar()">
               {{ weeklyCalendar ? "Monthly" : "Weekly" }}
             </button>
             <div class="weekly-calendar" *ngIf="weeklyCalendar">
               <p>weekly calendar</p>
-              <button mat-mini-fab class="add-button" color="primary">
-                <mat-icon>add</mat-icon>
-              </button>
+              <div class="button-container">
+                <button mat-mini-fab class="add-button" color="primary">
+                  <mat-icon>add</mat-icon>
+                </button>
+              </div>
             </div>
             <div class="monthly" *ngIf="monthlyCalendar">
               <p>montlhy calendar</p>
-              <button mat-mini-fab class="add-button" color="primary">
-                <mat-icon>add</mat-icon>
-              </button>
+              <div class="button-container">
+                <button mat-mini-fab class="add-button" color="primary">
+                  <mat-icon>add</mat-icon>
+                </button>
+              </div>
             </div>
           </div>
         </div>
