Task Board shell

--- a/client/src/app/task-board/task-board.component.html
+++ b/client/src/app/task-board/task-board.component.html
@@ -39,4 +39,15 @@
       </div>
     </div>
   </div>
+  <div class="notebook">
+    <div class="red-line"></div>
+    <div class="task-description-container">
+      <h5>Description</h5>
+      <div>Task Description Here</div>
+    </div>
+    <div class="task-notes-container">
+      <h5>Notes</h5>
+      <div>Task Notes Here</div>
+    </div>
+  </div>
 </div>
