--- a/client/src/app/task-board/task-board.component.css
+++ b/client/src/app/task-board/task-board.component.css
@@ -39,7 +39,10 @@ h2 {
 .left-board {
   margin: 2em 1em 2em 1em;
   padding: 1.5em 1em 1em 1.2em;
-  background-color: aliceblue;
+  color:rgb(62, 62, 62);
+  background-color: rgb(255, 255, 255);
+  background-image: linear-gradient(#ccc 1.1px, transparent 1px);
+  background-size: 100% 30px;
   border-radius: 3px;
   box-shadow: 3px 3px 5px;
   width: 30%;
@@ -58,3 +61,24 @@ h2 {
   display: flex;
   flex-direction: row;
 }
+
+.notebook {
+  width: 85%;
+  color:rgb(75, 75, 75);
+  border-radius: 3px;
+  background-color: rgb(252, 245, 236);
+  padding: 80px 45px 50px 90px;
+  background-image: linear-gradient(#ccc 1px, transparent 1px);
+  background-size: 20px 30px;
+  margin: 3em 6em 3em 6em;
+}
+
+/* .red-line{
+  margin: 0;
+  margin-left: -1.5em;;
+  position: absolute;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  border-left: 2px solid rgb(198, 98, 98);
+  height:100%;
+} */
