--- a/client/src/app/task-board/task-board.component.html
+++ b/client/src/app/task-board/task-board.component.html
@@ -7,9 +7,11 @@
         <div class="tasks">
           <div class="left-board">
             <h5>Reminders</h5>
+            <form class="add-reminder-form" *ngIf="addingReminder"></form>
             <div class="button-container">
-              <button mat-mini-fab class="add-button" color="primary">
-                <mat-icon>add</mat-icon>
+              <button mat-mini-fab class="add-button" [color]="addingReminder ? 'warn' : 'primary'"
+              (click)="toggleReminderForm()">
+                <mat-icon>{{ addingReminder ? "clear" : "add" }}</mat-icon>
               </button>
             </div>
           </div>
@@ -20,17 +22,28 @@
             </button>
             <div class="weekly-calendar" *ngIf="weeklyCalendar">
               <p>weekly calendar</p>
+              <form class="add-weekly-task-form" *ngIf="addingWeeklyTask"></form>
               <div class="button-container">
-                <button mat-mini-fab class="add-button" color="primary">
-                  <mat-icon>add</mat-icon>
+                <button
+                  mat-mini-fab
+                  [color]="addingWeeklyTask ? 'warn' : 'primary'"
+                  (click)="toggleWeeklyTaskForm()"
+                >
+                  <mat-icon>{{ addingWeeklyTask ? "clear" : "add" }}</mat-icon>
                 </button>
               </div>
             </div>
             <div class="monthly" *ngIf="monthlyCalendar">
               <p>montlhy calendar</p>
+              <form class="add-monthly-task-form" *ngIf="addingMonthlyTask"></form>
               <div class="button-container">
-                <button mat-mini-fab class="add-button" color="primary">
-                  <mat-icon>add</mat-icon>
+                <button
+                  mat-mini-fab
+                  class="add-button"
+                  [color]="addingMonthlyTask ? 'warn' : 'primary'"
+                  (click)="toggleMonthlyTaskForm()"
+                >
+                  <mat-icon>{{ addingMonthlyTask ? "clear" : "add" }}</mat-icon>
                 </button>
               </div>
             </div>
